# basic-services

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: basic-services-config.cmake
cmake/Modules/: GitTagVersion.cmake
examples/: CMakeLists.txt  ex-circle-buffer.cpp  ex-log.cpp  ex-queue.cpp  ex-serial.cpp  ex-source-file.cpp  ex-thread-pool.cpp  ex-timestamp.cpp  example-queue.cpp
include/: active-object.h  basic-allocator.h  circle-buffer.h  count-down-latch.h  current-thread.h  date.h  event.h  fsm.h  job-scheduler.h  log-stream.h  logging.h  noncopyable.h  queue.h  serial-device.h  source-file.h  static-only.h  thread-pool.h  thread-safe-stack.h  thread.h  timer.h  timestamp.h  types.h  version.h
include/impl/: serial-buffer-device-impl.h  serial-packet-device-impl.h
include/impl/unix/: serial-device-impl.h
include/impl/wins/: serial-device-impl.h
src/: CMakeLists.txt  basic-services_version.h.in  count-down-latch.cpp  current-thread.cpp  date.cpp  fsm.cpp  job-scheduler.cpp  log-stream.cpp  logging.cpp  serial-buffer-device.cpp  serial-device-unix.cpp  serial-device-wins.cpp  serial-device.cpp  serial-packet-device.cpp  thread-pool.cpp  thread.cpp  timer.cpp  timestamp.cpp
unit-tests/: CMakeLists.txt  gtest_main.cpp
